src/components/Contato.module.css
.contato{
    background-color: #f5f5f5;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.title {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 10px;
  color: #222;
}

.descricao {
    font-size: 16px;
    margin-bottom: 15px;
}

.lista {
    list-style-type: disc;
    padding-left: 20px;
}

